Adicionando Identity + JWT

--- a/api/appsettings.json
+++ b/api/appsettings.json
@@ -7,5 +7,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Username=postgres;Password=local123;Database=estudos"
-  } 
+  } ,
+
+  "AppSettings": {
+    "Secret": "THMPV-77D6F-94376-8HGKG-VRDRQ",
+    "ExpiracaoHoras": 2,
+    "Emissor": "MeuSistema",
+    "ValidoEm": "https://localhost"
+  }
 }
