--- a/api/appsettings.json
+++ b/api/appsettings.json
@@ -14,5 +14,13 @@
     "ExpiracaoHoras": 2,
     "Emissor": "MeuSistema",
     "ValidoEm": "https://localhost"
+  },
+  "HealthChecks-UI":{
+    "HealthChecks":[
+      {
+        "Name": "HC-API",
+        "uRI": "https://localhost:5001/api/hc"
+      }
+  ]
   }
 }
