--- a/DevIO.Data/appsettings.json
+++ b/DevIO.Data/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Username=postgres;Password=local123;Database=estudos"
+    "DefaultConnection":  "Server=mypostgresazure.postgres.database.azure.com;Database=estudos;Port=5432;User Id=postgresadmin;Password=docker@#1346;Ssl Mode=Require;"
   } 
 }
