--- a/api/api.csproj
+++ b/api/api.csproj
@@ -9,8 +9,10 @@
     <PackageReference Include="AspNetCore.HealthChecks.NpgSql" Version="2.2.0" />
     <PackageReference Include="AspNetCore.HealthChecks.UI" Version="2.2.28" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.1.0" />
-    <PackageReference Include="Elmah.Io.AspNetCore" Version="4.1.37" />
-    <PackageReference Include="Elmah.Io.Extensions.Logging" Version="4.1.28" />
+    <PackageReference Include="Elmah.Io.AspNetCore" Version="3.6.63" />
+    <PackageReference Include="Elmah.Io.AspNetCore.HealthChecks" Version="3.7.80" />
+    <PackageReference Include="Elmah.Io.Client" Version="3.4.63" />
+    <PackageReference Include="Elmah.Io.Extensions.Logging" Version="3.4.38" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="3.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="3.2.0" />
@@ -22,5 +24,6 @@
     <ProjectReference Include="..\DevIO.Business\DevIO.Business.csproj" />
     <ProjectReference Include="..\DevIO.Data\DevIO.Data.csproj" />
   </ItemGroup>
+ 
 
 </Project>
