--- a/api/appsettings.Development.json
+++ b/api/appsettings.Development.json
@@ -5,5 +5,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  }, 
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Username=postgres;Password=local123;Database=estudos"
   }
 }
